pkg/ibmvpc/examples/out/explain_out/VsiToVsi1_all_vpcs_explain_debug.txt
Connectivity explanation between vsi2-ky and vsi3b-ky within test-vpc1-ky
=========================================================================

The following connection exists between vsi2-ky[10.240.20.4] and vsi3b-ky[10.240.30.4]: protocol: TCP

Path:
	vsi2-ky[10.240.20.4] -> security group sg2-ky -> subnet2-ky -> network ACL acl2-ky -> 
	network ACL acl3-ky -> subnet3-ky -> security group sg2-ky -> vsi3b-ky[10.240.30.4]


Details:
~~~~~~~~
Egress:
security group sg2-ky allows connection with the following allow rules
	index: 5, direction: outbound, protocol: all, remoteCidr: 10.240.30.0/24, localCidr: 0.0.0.0/0
	index: 6, direction: outbound,  conns: protocol: tcp,  dstPorts: 1-65535, remoteCidr: 10.240.20.4/32,10.240.30.4/32, localCidr: 0.0.0.0/0
network ACL acl2-ky allows connection with the following allow rules
	index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

Ingress:
network ACL acl3-ky allows connection with the following allow rules
	index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
security group sg2-ky allows connection with the following allow rules
	index: 7, direction: inbound,  conns: protocol: tcp,  dstPorts: 1-65535, remoteCidr: 10.240.20.4/32,10.240.30.4/32, localCidr: 0.0.0.0/0

------------------------------------------------------------------------------------------------------------------------
